# server/docs/swagger.json
@@ -967,6 +967,10 @@
                 "user_id"
             ],
             "properties": {
+                "best_e1rm": {
+                    "type": "number",
+                    "example": 305
+                },
                 "created_at": {
                     "type": "string",
                     "example": "2023-01-01T15:04:05Z"
